[package]
name = "libcold"
version = "0.0.1"
edition = "2024"
license = "MIT"
description = "High-assurance crypto protocol library for Coldwire (Strandlock implementation)"
authors = ["Freedom Club Sec"]

[dependencies]
zeroize = { version = "1.8", features = ["derive"] }
chacha20poly1305 = "0.10.1"
oqs = "0.10.1"
rand = "0.9.2"
sha3 = "0.10.8"
generic-array = "1.3.5"
argon2 = "0.5.3"
hmac = "0.12.1"
subtle = "2.6.1"

